--- a/css/ordering/ordering.scss
+++ b/css/ordering/ordering.scss
@@ -26,11 +26,16 @@ background-clip: text;
 -webkit-text-fill-color: transparent;
     }
 .good-number{
-    font-size: 20px;
+   
+    font-size: calc(16px + 4 * (100vw - 400px) / 1920);
     font-weight: 600;
+   
+}
+.good__price{
+    font-size: calc(18px + 12 * (100vw - 400px) / 1920);
 }
     &__preview{
-    background-image: url(/img/ordering-bg.jpg);
+    background-image: url(../../img/ordering-bg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -50,7 +55,7 @@ background-clip: text;
 
 
 
-.input, input[type=color], input[type=date], input[type=datetime-local], input[type=datetime], input[type=email], input[type=month], input[type=number], input[type=password], input[type=range], input[type=search], input[type=tel], input[type=text], input[type=time], input[type=url], input[type=week], select, textarea {
+.input {
     padding: 0.375em 0.75em;
     line-height: 1.5;
     color: #111;
@@ -74,3 +79,143 @@ background-clip: text;
 .woocommerce .woocommerce-checkout .woocommerce-additional-fields .form-row .input-text, .woocommerce .woocommerce-checkout .woocommerce-billing-fields .form-row .input-text, .woocommerce .woocommerce-checkout .woocommerce-shipping-fields__field-wrapper .form-row .input-text, .woocommerce-EditAccountForm .form-row .input-text, .woocommerce-account .woocommerce-ResetPassword .woocommerce-form-row .woocommerce-Input, .woocommerce-account .woocommerce-form-login .woocommerce-form-row .woocommerce-Input, .woocommerce-account .woocommerce-form-register .woocommerce-form-row .woocommerce-Input, .woocommerce-address-fields .form-row .input-text {
     padding: 0.575em 0.95em;
 }
+
+
+.ordering {
+    background-image: url(../../img/ordering__bg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    // .ordering__preview
+
+    &__preview {
+        margin-bottom: 65px;
+      
+    }
+    // .ordering__body
+    &__body {
+        display: flex;
+        gap: calc(10px + 72 * (100vw - 400px) / 1920);
+   
+    }
+    // .ordering__col1
+
+    &__col1 {
+        flex: 1 1 50%;
+        p {
+            color: $text-color_black;
+            font-family: $main-fonts;
+            font-size: 16px;
+            margin-bottom: 15px;
+        }
+    }
+    &__col2{
+        flex: 1 1 50%;
+        .checkbox{
+            margin-bottom: 20px;
+            &__registration{
+                margin-bottom: 50px;
+            }
+        }
+    }
+    // .ordering__col1-inputWrapper
+
+    &__col1-inputWrapper {
+        height: 58px;
+        margin-top: 15px;
+    }
+    // .ordering__col1-contactYou
+
+    &__col1-contactYou {
+        display: flex;
+        gap: 26px;
+        height: 88px;
+    }
+
+    // .ordering__col1-item
+
+    &__col1-item {
+        p{
+            color: $text-color_dark;
+            font-family: $main-fonts;
+            font-size: 12px;
+        }
+        div {
+            margin-bottom: 5px;
+            width: 63px;
+            height: 58px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border-radius: 5px;
+            border: 0.2px solid $text-color_dark;
+            background: $text-color;
+
+        }
+        div:hover {
+            border: 0.2px solid #C38B34;
+        } 
+    }
+    .confirm-text{
+        font-size: calc(16px + 4 * (100vw - 400px) / 1920);
+        font-weight: 400;
+        margin-top: calc(20px + 20 * (100vw - 400px) / 1920);
+      
+    }
+}
+.form-row {
+    margin-bottom: 20px;
+    label {
+        display: inline-block;
+        color: $text-color_black;
+        font-family: $main-fonts;
+        font-size: 16px;
+        display: block;
+    }
+    .custom-textarea{
+        width: 100%;
+//height: 115px;
+    padding:20px;
+    border-radius: 5px;
+    border: 0.2px solid #a7a4a5;
+    font-size: 14px;
+    color: #a7a4a5;
+    margin-top: 15px;
+    resize: none;
+    height: 118px;
+    }
+  
+}
+
+@media (max-width: 880px) {
+    .ordering__preview{
+     padding: 15px;
+     .good{
+        padding: 15px;
+       flex-direction: row;
+       &-img{
+        width: 66px;
+       }
+     }
+    }
+     }
+     
+
+@media (max-width: 680px) {
+   .ordering{
+    .basket__goods{
+        display: block;
+    }
+   }
+    }
+    
+    
+    
+
+@media (max-width: 550px) {
+.ordering__body{
+    display: block;
+}
+}
+
+
