--- a/css/_catalog/catalog.css
+++ b/css/_catalog/catalog.css
@@ -239,10 +239,28 @@ select {
 }
 
 .catalog {
-  background-image: url(/img/catalpg-bg.jpg);
+  background-image: url(../../img/catalpg-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+.catalog .filter-show {
+  display: none;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 13px;
+}
+.catalog .subtitle-show {
+  /*display: flex;
+  align-items: center;*/
+  position: relative;
+  padding-top: 5px;
+}
+.catalog .subtitle-show .basket__close {
+  position: absolute;
+  top: 0;
+  cursor: pointer;
 }
 .catalog .filter-button {
   display: none;
@@ -281,7 +299,7 @@ select {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  color: #20191D;
+  color: #20191d;
   font-weight: 600;
   font-size: 14px;
 }
@@ -320,7 +338,7 @@ select {
 }
 .catalog__wrapper .btn {
   width: 100%;
-  margin-top: 15px;
+  margin-top: 20px;
 }
 
 .сatalog__range {
@@ -353,11 +371,13 @@ select {
 }
 .price__min input {
   border: 0.2px solid #a7a4a5;
+  font-size: 14px;
+  color: #a7a4a5;
 }
 .price__min-input {
   width: 100%;
   height: 100%;
-  padding-left: 27px;
+  padding: 0 20px;
   border-radius: 5px;
 }
 .price__max {
@@ -367,11 +387,13 @@ select {
 }
 .price__max input {
   border: 0.2px solid #a7a4a5;
+  font-size: 14px;
+  color: #a7a4a5;
 }
 .price__max-input {
   width: 100%;
   height: 100%;
-  padding-left: 27px;
+  padding: 0 20px;
   border-radius: 5px;
   border: none;
 }
@@ -381,6 +403,8 @@ select {
   grid-template-columns: [col1-s] minmax(200px, 274px) [col2-s] minmax(200px, 274px) [col3-s] minmax(200px, 274px);
   grid-template-rows: [row1-s] auto;
   grid-auto-rows: auto;
+  gap: 1.3rem;
+  grid-row-gap: 3rem;
 }
 .catalog__item-body {
   -webkit-box-flex: 1;
@@ -410,9 +434,42 @@ select {
   }
 }
 @media (max-width: 764px) {
+  .catalog__wrapper {
+    max-width: 100%;
+    display: none;
+  }
+  .catalog .active {
+    display: block;
+  }
+  .catalog__body {
+    display: block;
+  }
+  .catalog .mobile-hidden {
+    display: none;
+  }
+  .catalog .filter-show {
+    display: block;
+  }
+  .catalog .select__wrapper {
+    position: relative;
+  }
+  .catalog .select__wrapper::before {
+    content: url("/img/filter2.svg");
+    margin-right: 10px;
+    top: 9px;
+    left: 0px;
+    width: 14px;
+    height: 12px;
+  }
+  .catalog .catalog-ordering {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
   .catalog .catalog-ordering select {
     border: none;
     background: none;
+    padding: 0;
   }
   .catalog .filter-button {
     display: -webkit-box;
@@ -426,8 +483,13 @@ select {
   .catalog .filter-button img {
     margin-right: 10px;
   }
-  .catalog__wrapper {
-    display: none;
+  .catalog__wrapper-body {
+    margin-top: 40px;
+    grid-template-columns: [col1-s] minmax(126px, 200px) [col2-s] minmax(126px, 200px);
+    grid-column-gap: calc(20px + 75 * (100vw - 400px) / 760);
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 }
 .btn-block {
@@ -518,14 +580,14 @@ select {
 }
 
 .custom-checkbox:checked + label::before {
-  border-color: #C38B34;
+  border-color: #c38b34;
   background-color: #fff;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='C38B34' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
 }
 
 input:checked + label {
   position: relative;
-  color: #C38B34;
+  color: #c38b34;
 }
 
 .switch {
@@ -569,12 +631,12 @@ input:checked + label {
 }
 
 input:checked + .slider {
-  background: linear-gradient(211deg, #C38B34 27.99%, #ECC47E 80.38%);
+  background: linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
 }
 
 input:focus + .slider {
-  -webkit-box-shadow: 0 0 1px linear-gradient(211deg, #C38B34 27.99%, #ECC47E 80.38%);
-          box-shadow: 0 0 1px linear-gradient(211deg, #C38B34 27.99%, #ECC47E 80.38%);
+  -webkit-box-shadow: 0 0 1px linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
+          box-shadow: 0 0 1px linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
 }
 
 input:checked + .slider:before {
@@ -605,8 +667,8 @@ input[type=range]::-webkit-slider-runnable-track {
 }
 
 input[type=range]::-webkit-slider-thumb {
-  background: #cc9744;
-  border-radius: 10px/100%;
+  background: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
+  border-radius: 100%;
   cursor: pointer;
   width: 15px;
   height: 15px;
