--- a/css/_catalog/catalog.scss
+++ b/css/_catalog/catalog.scss
@@ -1,4 +1,4 @@
-@import '../style-general.scss';
+@import "../style-general.scss";
 $fonts: "Playfair Display Bold", serif;
 $main-fonts: "Open Sans reg", sans-serif;
 $main-fonts-light: "Open Sans light", sans-serif;
@@ -9,448 +9,462 @@ $text-color_dark: #a7a4a5;
 $text-color_black: #000;
 $text-active: #cc9744;
 $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
-.catalog{
-    background-image: url(/img/catalpg-bg.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-  .filter-button{
+
+
+
+.catalog {
+  background-image: url(../../img/catalpg-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  .filter-show{
+
+    display:none;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 600;
+    margin-bottom: 13px;
+  }
+  .subtitle-show{
+    /*display: flex;
+    align-items: center;*/
+    position: relative;
+    padding-top: 5px;
+    .basket__close{
+      position: absolute;
+      top: 0;
+      cursor: pointer;
+    }
+   
+  }
+  .filter-button {
     display: none;
   }
-    &__compound{
-        padding: 20px 0;
-        
-    }
+  &__compound {
+    padding: 20px 0;
+  }
 
-   
-    &-ordering{
-        text-align: right;
-        margin-bottom: 30px;
-        display: flex;
-        justify-content:right;
-        align-items: center;
-        &__checkbox{
-            display: flex;
-            align-items: center;
-            font-size: 14px;
-font-style: normal;
-font-weight: 600
-        }
-
-        .filter-btn{
-            display: flex;
-            align-items: center;
-            color: #20191D;
-            font-weight: 600;
-font-size: 14px;
-img{
-    margin-right: 11px;
-}
-        }
-select {
-            display: inline-block;
-            width: auto;
-            padding: 0.5em 1.5em;
-            border: 1px solid #ced4da;
-            -webkit-border-radius: 3px;
-            border-radius: 5px;
-            -moz-appearance: none;
-            -webkit-appearance: none;
-            appearance: none;
-            background-color: #fff;
-            background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%2364707b%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E);
-            background-repeat: no-repeat,repeat;
-            background-position: right 0.7em top 50%,0 0;
-            -webkit-background-size: 0.5em auto,100%;
-            background-size: 0.5em auto,100%;
-            cursor: pointer;
-        }
-  
-
-    }
-}
-.catalog__body{
+  &-ordering {
+    text-align: right;
+    margin-bottom: 30px;
     display: flex;
-    justify-content: center;
-    gap: 30px;
+    justify-content: right;
+    align-items: center;
+    &__checkbox {
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 600;
+    }
+
+    .filter-btn {
+      display: flex;
+      align-items: center;
+      color: #20191d;
+      font-weight: 600;
+      font-size: 14px;
+      img {
+        margin-right: 11px;
+      }
+    }
+    select {
+      display: inline-block;
+      width: auto;
+      padding: 0.5em 1.5em;
+      border: 1px solid #ced4da;
+      -webkit-border-radius: 3px;
+      border-radius: 5px;
+      -moz-appearance: none;
+      -webkit-appearance: none;
+      appearance: none;
+      background-color: #fff;
+      background-image: url(data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%2364707b%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E);
+      background-repeat: no-repeat, repeat;
+      background-position: right 0.7em top 50%, 0 0;
+      -webkit-background-size: 0.5em auto, 100%;
+      background-size: 0.5em auto, 100%;
+      cursor: pointer;
+    }
+  }
+}
+.catalog__body {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
 }
 
-.catalog__wrapper{
-    max-width: 275px;
-    .btn{
-        width: 100%;
-        margin-top: 15px;
-    }
+.catalog__wrapper {
+  max-width: 275px;
+
+  .btn {
+    width: 100%;
+    margin-top: 20px;
+  }
 }
 
 .сatalog__range {
-    //border-bottom: 1px dashed black;
-    margin-bottom: 20px;
+  //border-bottom: 1px dashed black;
+  margin-bottom: 20px;
 }
 
-.title__filter{
-    color: $text-color_black;
-    font-family: $main-fonts;
-    font-size: 18px;
-    font-weight: 600;
-    margin-bottom: 10px;
+.title__filter {
+  color: $text-color_black;
+  font-family: $main-fonts;
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
 
 .price {
-    
-    // .price__range
+  // .price__range
 
-    &__range {
-        display: flex;
-        justify-content: space-between;
-        width: 274px;
-        height: 44px;
+  &__range {
+    display: flex;
+    justify-content: space-between;
+    width: 274px;
+    height: 44px;
+  }
+
+  // .price__min
+
+  &__min {
+    flex: 0 1 123px;
+    border: none;
+    input {
+      border: 0.2px solid $text-color_dark;
+      font-size: 14px;
+      color: $text-color_dark;
     }
+  }
 
-    // .price__min
+  // .price__min-input
 
-    &__min {
-        flex: 0 1 123px;
-        border: none;
-        input {
-            border: .2px solid $text-color_dark;
-        }
+  &__min-input {
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    border-radius: 5px;
+  }
+
+  // .price__max
+
+  &__max {
+    flex: 0 1 123px;
+    input {
+      border: 0.2px solid $text-color_dark;
+      font-size: 14px;
+      color: $text-color_dark;
     }
+  }
 
-    // .price__min-input
+  // .price__max-input
 
-    &__min-input {
-        width: 100%;
-        height: 100%;
-        padding-left: 27px;
-        border-radius: 5px;
-        
-    }
-
-    // .price__max
-
-    &__max {
-        flex: 0 1 123px;
-        input {
-            border: .2px solid $text-color_dark;
-        }
-    }
-
-    // .price__max-input
-
-    &__max-input {
-        width: 100%;
-        height: 100%;
-        padding-left: 27px;
-        border-radius: 5px;
-        border: none;
-        
-    }
+  &__max-input {
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+    border-radius: 5px;
+    border: none;
+  }
 }
 
 .catalog {
+  // .catalog__wrapper-body
 
-    // .catalog__wrapper-body
+  &__wrapper-body {
+    display: grid;
+    grid-template-columns: [col1-s] minmax(200px, 274px) [col2-s] minmax(
+        200px,
+        274px
+      ) [col3-s] minmax(200px, 274px);
+    grid-template-rows: [row1-s] auto;
+    grid-auto-rows: auto;
 
-    &__wrapper-body {
-        display: grid;
-        grid-template-columns: [col1-s] minmax(200px, 274px) [col2-s] minmax(200px, 274px) [col3-s] minmax(200px, 274px);
-        grid-template-rows: [row1-s] auto ;
-        grid-auto-rows: auto;
+    gap: 1.3rem;
+    grid-row-gap: 3rem;
+  }
 
-    }
+  // .similarProducts__item-body
 
-    // .similarProducts__item-body
+  &__item-body {
+    flex: 1 1 auto;
+  }
 
-    &__item-body {
-        flex: 1 1 auto;
+  // .similarProducts__item-img
 
+  &__item-img {
+  }
 
-       
-    }
-    
-
-    // .similarProducts__item-img
-
-    &__item-img {
-    }
-
-    // // .similarProducts__svg-active
-
-    // &__svg-active {
-    // }
-
-    // // .catalog__item-media
-
-    //  &__item-media {
-
-    //  }
-
-    // // .similarProducts__item-price
-
-    // &__item-price {
-    // }
-
-     // .catalog__btn-rem
-
-     &__btn-rem {
-        padding: 1.1rem 2.3rem;
-        
-     }
+  &__btn-rem {
+    padding: 1.1rem 2.3rem;
+  }
 }
 
-@media (max-width: 1140px){
-    .catalog__btn-rem {
-        margin-left: 10px;
-    }
-    .catalog__item-media{
-        font-size: 18px;
-    }
-
+@media (max-width: 1140px) {
+  .catalog__btn-rem {
+    margin-left: 10px;
+  }
+  .catalog__item-media {
+    font-size: 18px;
+  }
 }
 
-@media (max-width: 1046px){
-    .catalog__btn-rem{
-        padding: 0.55rem 1.65rem;
-    }
+@media (max-width: 1046px) {
+  .catalog__btn-rem {
+    padding: 0.55rem 1.65rem;
+  }
 }
-@media (max-width: 985px){
-    .catalog__wrapper-body {
-        grid-template-columns: [col1-s] minmax(200px, 274px) [col2-s] minmax(200px, 274px);
-    }
+@media (max-width: 985px) {
+  .catalog__wrapper-body {
+    grid-template-columns: [col1-s] minmax(200px, 274px) [col2-s] minmax(
+        200px,
+        274px
+      );
+  }
 }
-@media (max-width: 764px){
-.catalog{
-    .catalog-ordering{
-    
-        select{
-            border: none;
-            background: none;
-            
-          
-        }
+@media (max-width: 764px) {
+  .catalog {
+    &__wrapper{
+      max-width: 100%;
+      display: none;  
     }
-    .filter-button{
-    display: flex;
-    align-items: center;
-    font-weight: 600;
-    img{
+    .active{
+      display: block;
+    }
+    &__body{
+      display: block;
+    }
+.mobile-hidden{
+  display: none;
+}
+    .filter-show{
+      display: block;
+    }
+    .select__wrapper{
+      position: relative;
+    }
+
+    .select__wrapper::before {
+      content: url('/img/filter2.svg');
+      margin-right: 10px;
+     // position: absolute;
+      top: 9px;
+      left: 0px;
+      width: 14px;
+      height: 12px;
+    }
+    .catalog-ordering {
+      justify-content: space-between;
+      select {
+        border: none;
+        background: none;
+        padding: 0;
+      }
+    }
+    .filter-button {
+      display: flex;
+      align-items: center;
+      font-weight: 600;
+      img {
         margin-right: 10px;
+      }
     }
-}
-}
-    .catalog__wrapper{
-        display: none;
-    }
-}
+  }
 
-.quantity {
+  
 
-    // .quantity__heart
 
-    &__heart {
-    }
-}
-.btn {
+  .catalog__wrapper {
+  }
+  .catalog__wrapper-body {
+    margin-top: 40px;
+    grid-template-columns: [col1-s] minmax(126px, 200px) [col2-s] minmax(126px,200px);
+    grid-column-gap: calc(20px + 75 * (100vw - 400px) / 760);
+    justify-content: center;
+  }
 }
 
-
-
-.btn-block{
-    //margin-top: 60px;
-   margin-top: calc(30px + 30 * (100vw - 400px) / 1920);
+.btn-block {
+  margin-top: calc(30px + 30 * (100vw - 400px) / 1920);
 }
 .filter-range-wrapper {
-    margin-bottom: 10px;
-    padding: 29px 0;
-    //margin-right: 10px;
-
+  margin-bottom: 10px;
+  padding: 29px 0;
 }
 
 .filter-range {
-    position: relative;
+  position: relative;
 }
 
 .filter-range-scale {
-    height: 2px;
-    border-radius: 60px;
-    background: rgba(61, 49, 55, 0.96);
+  height: 2px;
+  border-radius: 60px;
+  background: rgba(61, 49, 55, 0.96);
 }
 
 .filter-range-bar {
-    height: 2px;
-    width: 75%;
-    background:$gradient-color;
+  height: 2px;
+  width: 75%;
+  background: $gradient-color;
 }
 
 .filter-range-handle {
-    position: absolute;
-    top: 50%;
-    left: 0%;
-    transform: translateY(-50%);
-    width: 15px;
-    height: 15px;
-    box-sizing: content-box;
-    padding: 0;
-    border-radius: 50%;
-    background: $gradient-color;
-    cursor: pointer;
-    border: none
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translateY(-50%);
+  width: 15px;
+  height: 15px;
+  box-sizing: content-box;
+  padding: 0;
+  border-radius: 50%;
+  background: $gradient-color;
+  cursor: pointer;
+  border: none;
 }
 
 .compound-form {
-    display: grid;
-    grid-template-columns: [col1-s] 137px [col2-s] 137px ;
-    grid-template-rows: [row1-s] 30px ;
-    grid-auto-rows: 30px;
-    column-gap: 1rem;
+  display: grid;
+  grid-template-columns: [col1-s] 137px [col2-s] 137px;
+  grid-template-rows: [row1-s] 30px;
+  grid-auto-rows: 30px;
+  column-gap: 1rem;
 }
 .checkbox {
-    input {
-        width: 18px;
-        height: 18px;
-        margin: 0;
-        vertical-align: middle;
-
-    }
-    
-}
-.custom-checkbox {
-}
-
-.custom-checkbox {
-    position: absolute;
-    z-index: -1;
-    opacity: 0;
-}
-
-.custom-checkbox+label::before {
-    content: '';
-    display: inline-block;
-    width: 12px;
-    height: 12px;
+  input {
+    width: 18px;
+    height: 18px;
+    margin: 0;
     vertical-align: middle;
-    flex-shrink: 0;
-    -webkit-box-flex: 0;
-    flex-grow: 0;
-    padding: 6px;
-    border: 0.2px solid #a7a4a5;;
-    border-radius:2px ;
-    box-sizing: border-box;
-    margin-right: 0.5em;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: 50% 50%;
-}
-.custom-checkbox:checked+label::before {
-    border-color: #C38B34;
-    background-color: #fff;
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='C38B34' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
-}
-input:checked+label {
-    position: relative;
-    color: #C38B34;
+  }
 }
 
+.custom-checkbox {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
 
+.custom-checkbox + label::before {
+  content: "";
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
+  flex-shrink: 0;
+  -webkit-box-flex: 0;
+  flex-grow: 0;
+  padding: 6px;
+  border: 0.2px solid #a7a4a5;
+  border-radius: 2px;
+  box-sizing: border-box;
+  margin-right: 0.5em;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 50% 50%;
+}
+.custom-checkbox:checked + label::before {
+  border-color: #c38b34;
+  background-color: #fff;
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='C38B34' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
+input:checked + label {
+  position: relative;
+  color: #c38b34;
+}
 
 .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-    margin-right: 15px;
-  }
-  
-  /* Hide default HTML checkbox */
-  .switch input {display:none;}
-  
-  /* The slider */
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    width: 62px;
-    height: 32px;
-    background-color: #ccc;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 24px;
-    width: 24px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  input:checked + .slider {
-    background: linear-gradient(211deg, #C38B34 27.99%, #ECC47E 80.38%);;
-  }
-  
-  input:focus + .slider {
-    box-shadow: 0 0 1px linear-gradient(211deg, #C38B34 27.99%, #ECC47E 80.38%);;
-  }
-  
-  input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .slider.round {
-    border-radius: 34px;
-  }
-  
-  .slider.round:before {
-    border-radius: 50%;
-  }
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  margin-right: 15px;
+}
 
+/* Hide default HTML checkbox */
+.switch input {
+  display: none;
+}
 
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 62px;
+  height: 32px;
+  background-color: #ccc;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 24px;
+  width: 24px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-  input[type=range]  {
-    width: 100%;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-  }
-  input[type=range]::-webkit-slider-runnable-track {
-    border-radius: 10px/100%;
-    height: 3px;
-   // border: 1px solid cyan;
-    background-color: #3D3137F5;
-  }
-  input[type=range]::-webkit-slider-thumb {
-    background: $text-active;
-    //border: 1px solid cyan;
-    border-radius: 10px/100%;
-    cursor: pointer;
-    width:15px;
-    height: 15px;
-    -webkit-appearance: none;
-    margin-top: -6px;
-  }
+input:checked + .slider {
+  background: linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
+}
 
-  input[type=range]::-moz-range-track {
-      border-radius: 10px/100%;
-      height: 5px;
-     // border: 1px solid cyan;
-      background-color: #fff;
-  }
- input[type=range]::-moz-range-thumb {
-      background: $text-active;
-      //border: 1px solid cyan;
-      border-radius: 10px/100%;
-      cursor: pointer;
-  }
+input:focus + .slider {
+  box-shadow: 0 0 1px linear-gradient(211deg, #c38b34 27.99%, #ecc47e 80.38%);
+}
 
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+input[type="range"] {
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  border-radius: 10px/100%;
+  height: 3px;
+  background-color: #3d3137f5;
+}
+input[type="range"]::-webkit-slider-thumb {
+  background:$gradient-color;
+  border-radius: 100%;
+  cursor: pointer;
+  width: 15px;
+  height: 15px;
+  -webkit-appearance: none;
+  margin-top: -6px;
+}
+
+input[type="range"]::-moz-range-track {
+  border-radius: 10px/100%;
+  height: 5px;
+  background-color: #fff;
+}
+input[type="range"]::-moz-range-thumb {
+  background: $text-active;
+  border-radius: 10px/100%;
+  cursor: pointer;
+}
