--- a/css/_otzivi/otzivi.scss
+++ b/css/_otzivi/otzivi.scss
@@ -10,7 +10,7 @@ $text-active: #cc9744;
 $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
 
 .otzivi {
-  background-image: url(/img/catalpg-bg.jpg);
+  background-image: url(../../img/catalpg-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -66,7 +66,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
 }
 
 .otzivi-pulquote {
-  background-image: url(/img/otzivi-bg.jpg);
+  background-image: url(../../img/otzivi-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
