--- a/css/modal-city.scss
+++ b/css/modal-city.scss
@@ -68,7 +68,7 @@ position: relative;
 }
 .modal__dialog{
   max-width: 50%;
-  margin: 40px auto;
+  margin: 10% auto;
 }
 .modal__close {
   position: absolute;
