--- a/css/oplata_dostavka/oplata_dostavka.css
+++ b/css/oplata_dostavka/oplata_dostavka.css
@@ -1,10 +1,10 @@
 .dostavkaoplata {
-  background-image: url(/img/oplatadostavka-bg.jpg);
+  background-image: url(../img/oplatadostavka-bg.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  font-size: 18px;
 }
 .dostavkaoplata .dostavka {
   margin-bottom: 30px;
-  font-size: 18px;
 }/*# sourceMappingURL=oplata_dostavka.css.map */
