--- a/css/_basket/basket.scss
+++ b/css/_basket/basket.scss
@@ -76,6 +76,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
     grid-row: row3-s/row3-s;
     background: none;
     border: none;
+    cursor: pointer;
   }
 
   // .basket__item
