--- a/css/_catalog/catalog.css
+++ b/css/_catalog/catalog.css
@@ -138,17 +138,6 @@ select {
 }
 
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-    -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
-    -webkit-transition-duration: 0.01ms !important;
-            transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
 .btn {
   border-radius: 5px;
   border: 1px solid rgb(204, 151, 68);
@@ -157,8 +146,10 @@ select {
   padding: 18px 40px;
   text-align: center;
   display: inline-block;
+  cursor: pointer;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
-
 .block__title h2 {
   font-family: "Playfair Display Bold", serif;
   font-size: calc(25px + 30 * (100vw - 400px) / 1920);
@@ -390,6 +381,15 @@ select {
   font-size: 14px;
   color: #a7a4a5;
 }
+.price__max input:active {
+  border: 0.2px solid #cc9744;
+}
+.price__max :focus {
+  outline: none;
+}
+.price__max input:focus-visible {
+  border: 0.2px solid #cc9744;
+}
 .price__max-input {
   width: 100%;
   height: 100%;
@@ -410,6 +410,12 @@ select {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+.catalog__item-body:hover {
+  -webkit-transform: scale(1.03);
+          transform: scale(1.03);
 }
 .catalog__btn-rem {
   padding: 1.1rem 2.3rem;
