--- a/css/_otzivi/otzivi.css
+++ b/css/_otzivi/otzivi.css
@@ -64,7 +64,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  padding: 44px;
+  padding: calc(20px + 24 * (100vw - 400px) / 1920);
   color: #fff;
   font-size: calc(16px + 9 * (100vw - 400px) / 1920);
   font-weight: 400;
@@ -75,4 +75,8 @@
 .otzivi-pulquote .text {
   margin-bottom: 40px;
   max-width: 800px;
+}
+
+.otzivi__btn-midle {
+  text-align: center;
 }/*# sourceMappingURL=otzivi.css.map */
