--- a/css/modal-city.scss
+++ b/css/modal-city.scss
@@ -57,7 +57,7 @@ background-color: rgba(0,0,0,.5);
   opacity: 1;
   width: 100%;
   height: 100%;
- 
+
 }
 .pum-content{
   padding: 18px;
@@ -65,6 +65,20 @@ background-color: rgba(0,0,0,.5);
     box-shadow: 0px 0px 30px 0px rgba( 2, 2, 2, 1.00 );
     background-color: rgba( 255, 255, 255, 1.00 );
 position: relative;
+-webkit-animation-name: animatetop;
+-webkit-animation-duration: 0.4s;
+animation-name: animatetop;
+animation-duration: 0.4s
+}
+
+@-webkit-keyframes animatetop {
+  from {opacity:0} 
+  to { opacity:1}
+}
+
+@keyframes animatetop {
+  from { opacity:0}
+  to { opacity:1}
 }
 .modal__dialog{
   max-width: 50%;
