--- a/css/style5-questions.css
+++ b/css/style5-questions.css
@@ -138,17 +138,6 @@ select {
 }
 
 /* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
-@media (prefers-reduced-motion: reduce) {
-  * {
-    -webkit-animation-duration: 0.01ms !important;
-            animation-duration: 0.01ms !important;
-    -webkit-animation-iteration-count: 1 !important;
-            animation-iteration-count: 1 !important;
-    -webkit-transition-duration: 0.01ms !important;
-            transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
-}
 .btn {
   border-radius: 5px;
   border: 1px solid rgb(204, 151, 68);
@@ -157,8 +146,10 @@ select {
   padding: 18px 40px;
   text-align: center;
   display: inline-block;
+  cursor: pointer;
+  -webkit-transition: 1s;
+  transition: 1s;
 }
-
 .block__title h2 {
   font-family: "Playfair Display Bold", serif;
   font-size: calc(25px + 30 * (100vw - 400px) / 1920);
@@ -259,8 +250,9 @@ select {
   padding-left: 20px;
 }
 
-#block1 .title, #block2 .title, #block3 .title {
+#block1 .title, #block2 .title, #block3 .title, #block4 .title {
   font-size: calc(14px + 4 * (100vw - 400px) / 1920);
+  width: 100%;
   cursor: pointer;
 }
 
