--- a/css/_our_contacts/our_contacts.css
+++ b/css/_our_contacts/our_contacts.css
@@ -1,5 +1,5 @@
 .contacts {
-  background-image: url(/img/contacts__bg.png);
+  background-image: url(../../img/contacts__bg.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -38,7 +38,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
-  background-image: url(/img/reviews-fon.jpg);
+  background-image: url(../../img/reviews-fon.jpg);
   background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
