--- a/css/_our_contacts/our_contacts.scss
+++ b/css/_our_contacts/our_contacts.scss
@@ -12,7 +12,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
 
 
 .contacts {
-    background-image: url(/img/contacts__bg.png);
+    background-image: url(../../img/contacts__bg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -49,7 +49,7 @@ $gradient-color: linear-gradient(211deg, #ce8715 27.99%, #ecc47e 80.38%);
         background-repeat: no-repeat;
         background-position: center;
         background-size: contain; 
-        background-image: url(/img/reviews-fon.jpg);
+        background-image: url(../../img/reviews-fon.jpg);
         background-size: cover;
         display: flex;
         align-items: start;
