--- a/css/style2-header-wrapper.scss
+++ b/css/style2-header-wrapper.scss
@@ -77,9 +77,7 @@ margin-left: 4px;
     font-size: 12px;
     width: 165px;
     transition: none;
-    &:hover  
-  
-{
+    &:hover {
       background:$gradient-color;
       color:#fff;
 
