--- a/css/_catalog/catalog.css
+++ b/css/_catalog/catalog.css
@@ -273,6 +273,9 @@ select {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 .catalog-ordering__checkbox {
   display: -webkit-box;
@@ -366,6 +369,15 @@ select {
   border: 0.2px solid #a7a4a5;
   font-size: 14px;
   color: #a7a4a5;
+}
+.price__min input:active {
+  border: 0.2px solid #cc9744;
+}
+.price__min :focus {
+  outline: none;
+}
+.price__min input:focus-visible {
+  border: 0.2px solid #cc9744;
 }
 .price__min-input {
   width: 100%;
@@ -473,6 +485,9 @@ select {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+  }
+  .catalog .catalog-ordering h3 {
+    display: none;
   }
   .catalog .catalog-ordering select {
     border: none;
